--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -355,11 +355,9 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe52:c6f8;
 allow 2a02:16d0:0:5::1;
-allow 2a02:2479:0:6e00::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
-allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -698,13 +696,13 @@ allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
 allow 2a0e:bfc0:0:13::67bc;
 allow 2a0e:bfc0:0:14::24a8;
+allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc0:0:8::a84e;
 allow 2a0e:bfc2:0:24::3456;
 allow 2a0e:bfc2:0:2c::1;
 allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:bfc7:0:4::6e7a;
 allow 2a0e:e701:1198::1;
-allow 2a0f:7803:fac2:ab6d::1;
 allow 2a0f:7803:fac5:cd0::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:424c::1;
