--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -156,7 +156,6 @@ deny 152.53.53.243;
 deny 154.16.116.61;
 deny 154.41.95.1;
 deny 154.41.95.2;
-deny 154.83.88.219;
 deny 158.69.252.116;
 deny 160.119.249.240;
 deny 161.129.68.162;
@@ -949,7 +948,6 @@ deny 216.239.90.19;
 deny 216.73.159.101;
 deny 216.73.159.75;
 deny 217.12.221.131;
-deny 217.154.21.121;
 deny 217.199.199.250;
 deny 23.137.248.100;
 deny 23.137.248.192;
@@ -1245,11 +1243,9 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e01::f03c:95ff:fe52:c6f8;
 deny 2a02:16d0:0:5::1;
-deny 2a02:2479:0:6e00::1;
 deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
-deny 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c204:2195:2012::1;
@@ -1588,13 +1584,13 @@ deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:11::796d;
 deny 2a0e:bfc0:0:13::67bc;
 deny 2a0e:bfc0:0:14::24a8;
+deny 2a0e:bfc0:0:5::2;
 deny 2a0e:bfc0:0:8::a84e;
 deny 2a0e:bfc2:0:24::3456;
 deny 2a0e:bfc2:0:2c::1;
 deny 2a0e:bfc7:0:3::2d83;
 deny 2a0e:bfc7:0:4::6e7a;
 deny 2a0e:e701:1198::1;
-deny 2a0f:7803:fac2:ab6d::1;
 deny 2a0f:7803:fac5:cd0::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:424c::1;
@@ -1701,7 +1697,6 @@ deny 37.120.239.59;
 deny 37.187.5.192;
 deny 37.221.208.71;
 deny 37.228.129.189;
-deny 37.228.129.5;
 deny 37.228.129.63;
 deny 37.48.120.196;
 deny 37.48.70.156;
@@ -1770,6 +1765,7 @@ deny 45.66.35.32;
 deny 45.66.35.33;
 deny 45.66.35.34;
 deny 45.66.35.35;
+deny 45.67.34.82;
 deny 45.79.144.222;
 deny 45.80.158.167;
 deny 45.80.158.175;
@@ -1778,7 +1774,6 @@ deny 45.80.158.23;
 deny 45.80.158.27;
 deny 45.80.158.36;
 deny 45.80.158.69;
-deny 45.80.158.97;
 deny 45.8.22.207;
 deny 45.83.104.137;
 deny 45.84.107.101;
@@ -1829,6 +1824,7 @@ deny 45.95.169.109;
 deny 45.95.169.130;
 deny 45.95.169.14;
 deny 45.95.169.230;
+deny 45.95.169.252;
 deny 46.165.243.36;
 deny 46.182.21.248;
 deny 46.23.109.25;
@@ -1924,7 +1920,6 @@ deny 8.209.106.19;
 deny 82.221.128.191;
 deny 82.221.131.5;
 deny 82.221.139.190;
-deny 82.68.49.227;
 deny 83.217.9.73;
 deny 83.96.213.63;
 deny 83.97.20.77;
@@ -1946,6 +1941,7 @@ deny 88.80.20.86;
 deny 88.80.26.2;
 deny 88.80.26.3;
 deny 88.80.26.4;
+deny 89.110.95.200;
 deny 89.147.108.90;
 deny 89.147.110.118;
 deny 89.147.110.154;
