--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -170,10 +170,8 @@ allow 162.247.74.204;
 allow 162.247.74.206;
 allow 162.247.74.213;
 allow 162.247.74.216;
-allow 162.247.74.217;
 allow 162.247.74.27;
 allow 162.247.74.7;
-allow 162.247.74.74;
 allow 162.251.5.152;
 allow 163.172.45.102;
 allow 164.132.172.209;
@@ -217,7 +215,6 @@ allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
-allow 177.149.135.190;
 allow 178.162.175.5;
 allow 178.17.170.144;
 allow 178.17.170.23;
@@ -524,7 +521,6 @@ allow 185.247.184.33;
 allow 185.252.232.218;
 allow 185.254.196.141;
 allow 185.34.33.2;
-allow 185.35.136.17;
 allow 185.35.202.222;
 allow 185.39.207.83;
 allow 185.40.4.100;
@@ -953,6 +949,7 @@ allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
+allow 217.154.21.121;
 allow 217.199.199.250;
 allow 23.137.248.100;
 allow 23.137.248.192;
@@ -1235,6 +1232,7 @@ allow 2a00:1dc0:caff:68::1;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:4d80::1;
+allow 2a00:6020:a581:400:1602:ecff:fe41:d0ad;
 allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
@@ -1249,6 +1247,7 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe52:c6f8;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2479:0:6e00::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1730,6 +1729,7 @@ allow 45.138.16.42;
 allow 45.138.16.69;
 allow 45.138.16.76;
 allow 45.138.87.142;
+allow 45.139.50.202;
 allow 45.139.50.204;
 allow 45.141.215.110;
 allow 45.141.215.111;
@@ -1843,6 +1843,7 @@ allow 51.38.225.46;
 allow 51.81.222.62;
 allow 5.181.80.107;
 allow 5.196.95.34;
+allow 5.230.119.146;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.101.10;
@@ -1854,7 +1855,6 @@ allow 5.255.111.64;
 allow 5.255.114.171;
 allow 5.255.115.58;
 allow 5.255.117.56;
-allow 5.255.118.183;
 allow 5.255.118.218;
 allow 5.255.121.71;
 allow 5.255.123.158;
@@ -1879,7 +1879,6 @@ allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
 allow 57.128.220.107;
-allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.182.84.146;
 allow 62.72.47.105;
@@ -1940,7 +1939,6 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
-allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
@@ -1976,6 +1974,7 @@ allow 92.246.84.133;
 allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
+allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
