--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -418,7 +418,6 @@ deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
-deny 2a04:9b87:500::58;
 deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
@@ -547,6 +546,7 @@ deny 2a0b:f4c2::16;
 deny 2a0b:f4c2::17;
 deny 2a0b:f4c2::18;
 deny 2a0b:f4c2::19;
+deny 2a0b:f4c2::2;
 deny 2a0b:f4c2::20;
 deny 2a0b:f4c2::21;
 deny 2a0b:f4c2::22;
