--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -402,6 +402,7 @@ set_real_ip_from 185.220.101.189;
 set_real_ip_from 185.220.101.19;
 set_real_ip_from 185.220.101.190;
 set_real_ip_from 185.220.101.191;
+set_real_ip_from 185.220.101.2;
 set_real_ip_from 185.220.101.20;
 set_real_ip_from 185.220.101.21;
 set_real_ip_from 185.220.101.22;
@@ -497,7 +498,6 @@ set_real_ip_from 185.227.134.106;
 set_real_ip_from 185.231.102.51;
 set_real_ip_from 185.233.100.23;
 set_real_ip_from 185.235.146.29;
-set_real_ip_from 185.238.121.58;
 set_real_ip_from 185.241.208.115;
 set_real_ip_from 185.241.208.185;
 set_real_ip_from 185.241.208.202;
@@ -1306,7 +1306,6 @@ set_real_ip_from 2a04:52c0:123:c6c3::1;
 set_real_ip_from 2a04:52c0:126:3ab8::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:130:896e::1;
-set_real_ip_from 2a04:9b87:500::58;
 set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
@@ -1435,6 +1434,7 @@ set_real_ip_from 2a0b:f4c2::16;
 set_real_ip_from 2a0b:f4c2::17;
 set_real_ip_from 2a0b:f4c2::18;
 set_real_ip_from 2a0b:f4c2::19;
+set_real_ip_from 2a0b:f4c2::2;
 set_real_ip_from 2a0b:f4c2::20;
 set_real_ip_from 2a0b:f4c2::21;
 set_real_ip_from 2a0b:f4c2::22;
@@ -1680,6 +1680,7 @@ set_real_ip_from 2c0f:6c0:0:4::95ea;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
+set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.50.124;
@@ -1696,7 +1697,6 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
-set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
