--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -418,7 +418,6 @@ set_real_ip_from 2a04:52c0:123:c6c3::1;
 set_real_ip_from 2a04:52c0:126:3ab8::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:130:896e::1;
-set_real_ip_from 2a04:9b87:500::58;
 set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
@@ -547,6 +546,7 @@ set_real_ip_from 2a0b:f4c2::16;
 set_real_ip_from 2a0b:f4c2::17;
 set_real_ip_from 2a0b:f4c2::18;
 set_real_ip_from 2a0b:f4c2::19;
+set_real_ip_from 2a0b:f4c2::2;
 set_real_ip_from 2a0b:f4c2::20;
 set_real_ip_from 2a0b:f4c2::21;
 set_real_ip_from 2a0b:f4c2::22;
